1260: Fix spacing beneath header strip - was 20px too much compared to designs

--- a/src/css/molecules/header-strip.scss
+++ b/src/css/molecules/header-strip.scss
@@ -3,7 +3,7 @@
   color: $color-white;
   @media #{$mq-md} {
     padding: $spacing-md 0px;
-    margin-bottom: $layout-xl;
+    margin-bottom: 76px; // + 24px from mzp-l-content == 100px
   }
 
   .icon-wrapper {
